Adjusted hobbies & favourites styling

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 				<h1 class="section-title">Moje hobby</h1>
 				<div class="row">
 					<div class="col-sm-12 col-md-6 col-lg-3 card--hobby">
-						<div class="card card-with-icon h-100">
+						<div class="card card-with-icon">
 							<div class="card-body d-flex flex-column justify-content-center">
 								<div class="card-icon">
 									<i class="fas fa-terminal"></i>
@@ -268,7 +268,7 @@
 						</div>
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-3 card--hobby">
-						<div class="card card-with-icon h-100">
+						<div class="card card-with-icon">
 							<div class="card-body d-flex flex-column justify-content-center">
 								<div class="card-icon">
 									<i class="fas fa-paint-brush"></i>
@@ -280,7 +280,7 @@
 						</div>
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-3 card--hobby">
-						<div class="card card-with-icon h-100">
+						<div class="card card-with-icon">
 							<div class="card-body d-flex flex-column justify-content-center">
 								<div class="card-icon">
 									<i class="fas fa-desktop"></i>
@@ -292,7 +292,7 @@
 						</div>
 					</div>
 					<div class="col-sm-12 col-md-6 col-lg-3 card--hobby">
-						<div class="card card-with-icon h-100">
+						<div class="card card-with-icon">
 							<div class="card-body d-flex flex-column justify-content-center">
 								<div class="card-icon">
 									<i class="fas fa-robot"></i>
@@ -309,12 +309,19 @@
 		<section id="favourites" class="section section--primary">
 			<div class="container">
 				<h1 class="section-title">Moje ulubione</h1>
-				<h3 class="card-section-title text-white">Filmy i programy TV</h3>
 				<div class="card-section">
+					<h3 class="card-section-title">Filmy i programy TV</h3>
 					<div class="row">
 						<div class="col-md-4 col-lg-2 card--favourite">
 							<div class="card card-with-vertical-image h-100">
-								<img class="card-img-top" src="assets/images/favourites/posters/the-judge.jpg" alt="The Judge Poster">
+								<a href="https://www.imdb.com/title/tt1872194/" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/favourites/posters/the-judge.jpg" alt="The Judge Poster">
+										<span class="overlay">
+											<i class="fas fa-external-link-alt"></i>
+										</span>
+									</div>
+								</a>
 								<div class="card-body d-flex flex-column justify-content-center">
 									<p class="card-title">
 										<span class="d-block">The Judge</span>(2014)
@@ -324,7 +331,14 @@
 						</div>
 						<div class="col-md-4 col-lg-2 card--favourite">
 							<div class="card card-with-vertical-image h-100">
-								<img class="card-img-top" src="assets/images/favourites/posters/interstellar.jpg" alt="Interstellar Poster">
+								<a href="https://www.imdb.com/title/tt0816692/" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/favourites/posters/interstellar.jpg" alt="Interstellar Poster">
+										<span class="overlay">
+											<i class="fas fa-external-link-alt"></i>
+										</span>
+									</div>
+								</a>
 								<div class="card-body d-flex flex-column justify-content-center">
 									<p class="card-title">
 										<span class="d-block">Interstellar</span>(2014)
@@ -334,7 +348,14 @@
 						</div>
 						<div class="col-md-4 col-lg-2 card--favourite">
 							<div class="card card-with-vertical-image h-100">
-								<img class="card-img-top" src="assets/images/favourites/posters/the-godfather.jpg" alt="The Godfather Poster">
+								<a href="https://www.imdb.com/title/tt0068646/" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/favourites/posters/the-godfather.jpg" alt="The Godfather Poster">
+										<span class="overlay">
+											<i class="fas fa-external-link-alt"></i>
+										</span>
+									</div>
+								</a>
 								<div class="card-body d-flex flex-column justify-content-center">
 									<p class="card-title">
 										<span class="d-block">The Godfather</span>(1972)
@@ -344,7 +365,14 @@
 						</div>
 						<div class="col-md-4 col-lg-2 card--favourite">
 							<div class="card card-with-vertical-image h-100">
-								<img class="card-img-top" src="assets/images/favourites/posters/demolition.jpg" alt="Demolition Poster">
+								<a href="https://www.imdb.com/title/tt1172049/" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/favourites/posters/demolition.jpg" alt="Demolition Poster">
+										<span class="overlay">
+											<i class="fas fa-external-link-alt"></i>
+										</span>
+									</div>
+								</a>
 								<div class="card-body d-flex flex-column justify-content-center">
 									<p class="card-title">
 										<span class="d-block">Demolition</span>(2015)
@@ -354,7 +382,14 @@
 						</div>
 						<div class="col-md-4 col-lg-2 card--favourite">
 							<div class="card card-with-vertical-image h-100">
-								<img class="card-img-top" src="assets/images/favourites/posters/intouchables.jpg" alt="Intouchables Poster">
+								<a href="https://www.imdb.com/title/tt1675434/" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/favourites/posters/intouchables.jpg" alt="Intouchables Poster">
+										<span class="overlay">
+											<i class="fas fa-external-link-alt"></i>
+										</span>
+									</div>
+								</a>
 								<div class="card-body d-flex flex-column justify-content-center">
 									<p class="card-title">
 										<span class="d-block">Intouchables</span>(2011)
@@ -364,7 +399,14 @@
 						</div>
 						<div class="col-md-4 col-lg-2 card--favourite">
 							<div class="card card-with-vertical-image h-100">
-								<img class="card-img-top" src="assets/images/favourites/posters/battlebots.jpg" alt="BattleBots Poster">
+								<a href="https://www.imdb.com/title/tt4816364/" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/favourites/posters/battlebots.jpg" alt="BattleBots Poster">
+										<span class="overlay">
+											<i class="fas fa-external-link-alt"></i>
+										</span>
+									</div>
+								</a>
 								<div class="card-body d-flex flex-column justify-content-center">
 									<p class="card-title">
 										<span class="d-block">BattleBots</span>(2015)
