Restructured card component

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 		</nav>
 		<header id="intro" class="hero hero--primary">
 			<div class="container h-100">
-				<div class="row align-items-center h-100">
-					<div class="m-auto">
+				<div class="row h-100">
+					<div class="col-md-12 col-lg-9 m-auto">
 						<div class="card card--intro">
 							<div class="row align-items-center flex-nowrap">
 								<div class="col">
