--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 									</div>
 								</a>
 								<div class="card-body d-flex flex-column justify-content-center">
-									<p class="card-title">
+									<p class="card-title hyphens">
 										<span class="d-block">The Judge</span>(2014)
 									</p>
 								</div>
@@ -340,7 +340,7 @@
 									</div>
 								</a>
 								<div class="card-body d-flex flex-column justify-content-center">
-									<p class="card-title">
+									<p class="card-title hyphens">
 										<span class="d-block">Interstellar</span>(2014)
 									</p>
 								</div>
@@ -357,7 +357,7 @@
 									</div>
 								</a>
 								<div class="card-body d-flex flex-column justify-content-center">
-									<p class="card-title">
+									<p class="card-title hyphens">
 										<span class="d-block">The Godfather</span>(1972)
 									</p>
 								</div>
@@ -374,7 +374,7 @@
 									</div>
 								</a>
 								<div class="card-body d-flex flex-column justify-content-center">
-									<p class="card-title">
+									<p class="card-title hyphens">
 										<span class="d-block">Demolition</span>(2015)
 									</p>
 								</div>
@@ -391,7 +391,7 @@
 									</div>
 								</a>
 								<div class="card-body d-flex flex-column justify-content-center">
-									<p class="card-title">
+									<p class="card-title hyphens">
 										<span class="d-block">Intouchables</span>(2011)
 									</p>
 								</div>
@@ -408,8 +408,115 @@
 									</div>
 								</a>
 								<div class="card-body d-flex flex-column justify-content-center">
-									<p class="card-title">
+									<p class="card-title hyphens">
 										<span class="d-block">BattleBots</span>(2015)
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="card-section">
+					<h3 class="card-section-title">Kanały na YouTube</h3>
+					<div class="row">
+						<div class="col-md-4 col-lg-2 card--favourite">
+							<div class="card card-with-vertical-image h-100">
+								<a href="https://www.youtube.com/user/LinusTechTips" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/favourites/youtube-channels/linustechtips.jpg" alt="LinusTechTips">
+										<span class="overlay">
+											<i class="fas fa-external-link-alt"></i>
+										</span>
+									</div>
+								</a>
+								<div class="card-body d-flex flex-column justify-content-center hyphens">
+									<p class="card-title">
+										LinusTechTips
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-lg-2 card--favourite">
+							<div class="card card-with-vertical-image h-100">
+								<a href="https://www.youtube.com/channel/UC4QZ_LsYcvcq7qOsOhpAX4A" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/favourites/youtube-channels/coldfusion.jpg" alt="ColdFusion">
+										<span class="overlay">
+											<i class="fas fa-external-link-alt"></i>
+										</span>
+									</div>
+								</a>
+								<div class="card-body d-flex flex-column justify-content-center hyphens">
+									<p class="card-title">
+										ColdFusion
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-lg-2 card--favourite">
+							<div class="card card-with-vertical-image h-100">
+								<a href="https://www.youtube.com/channel/UCR1IuLEqb6UEA_zQ81kwXfg" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/favourites/youtube-channels/realengineering.jpg" alt="ColdFusion">
+										<span class="overlay">
+											<i class="fas fa-external-link-alt"></i>
+										</span>
+									</div>
+								</a>
+								<div class="card-body d-flex flex-column justify-content-center hyphens">
+									<p class="card-title">
+										RealEngineering
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-lg-2 card--favourite">
+							<div class="card card-with-vertical-image h-100">
+								<a href="https://www.youtube.com/channel/UC6mIxFTvXkWQVEHPsEdflzQ" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/favourites/youtube-channels/greatscott.jpg" alt="GreatScott!">
+										<span class="overlay">
+											<i class="fas fa-external-link-alt"></i>
+										</span>
+									</div>
+								</a>
+								<div class="card-body d-flex flex-column justify-content-center hyphens">
+									<p class="card-title">
+										GreatScott!
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-lg-2 card--favourite">
+							<div class="card card-with-vertical-image h-100">
+								<a href="https://www.youtube.com/channel/UCQ0KFtUTiUVKL9TDb8m65NQ" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/favourites/youtube-channels/generalsgentlemen.jpg" alt="GeneralsGentlemen">
+										<span class="overlay">
+											<i class="fas fa-external-link-alt"></i>
+										</span>
+									</div>
+								</a>
+								<div class="card-body d-flex flex-column justify-content-center hyphens">
+									<p class="card-title">
+										GeneralsGentlemen
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-lg-2 card--favourite">
+							<div class="card card-with-vertical-image h-100">
+								<a href="https://www.youtube.com/channel/UCLx053rWZxCiYWsBETgdKrQ" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/favourites/youtube-channels/lgr.jpg" alt="LGR">
+										<span class="overlay">
+											<i class="fas fa-external-link-alt"></i>
+										</span>
+									</div>
+								</a>
+								<div class="card-body d-flex flex-column justify-content-center hyphens">
+									<p class="card-title">
+										LGR
 									</p>
 								</div>
 							</div>
