Added favourite music bands to favourites section

--- a/index.html
+++ b/index.html
@@ -429,8 +429,8 @@
 										</span>
 									</div>
 								</a>
-								<div class="card-body d-flex flex-column justify-content-center hyphens">
-									<p class="card-title">
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title hyphens">
 										LinusTechTips
 									</p>
 								</div>
@@ -446,8 +446,8 @@
 										</span>
 									</div>
 								</a>
-								<div class="card-body d-flex flex-column justify-content-center hyphens">
-									<p class="card-title">
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title hyphens">
 										ColdFusion
 									</p>
 								</div>
@@ -463,8 +463,8 @@
 										</span>
 									</div>
 								</a>
-								<div class="card-body d-flex flex-column justify-content-center hyphens">
-									<p class="card-title">
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title hyphens">
 										RealEngineering
 									</p>
 								</div>
@@ -480,8 +480,8 @@
 										</span>
 									</div>
 								</a>
-								<div class="card-body d-flex flex-column justify-content-center hyphens">
-									<p class="card-title">
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title hyphens">
 										GreatScott!
 									</p>
 								</div>
@@ -497,8 +497,8 @@
 										</span>
 									</div>
 								</a>
-								<div class="card-body d-flex flex-column justify-content-center hyphens">
-									<p class="card-title">
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title hyphens">
 										GeneralsGentlemen
 									</p>
 								</div>
@@ -514,9 +514,116 @@
 										</span>
 									</div>
 								</a>
-								<div class="card-body d-flex flex-column justify-content-center hyphens">
-									<p class="card-title">
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title hyphens">
 										LGR
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="card-section">
+					<h3 class="card-section-title">Zespoły muzyczne</h3>
+					<div class="row">
+						<div class="col-md-4 col-lg-2 card--favourite">
+							<div class="card card-with-vertical-image h-100">
+								<a href="https://www.youtube.com/watch?v=R3lPmKarxJ4&list=PL9DF82EDE980AE95A" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/favourites/music-bands/ostr.jpg" alt="O.S.T.R.">
+										<span class="overlay">
+											<i class="fas fa-external-link-alt"></i>
+										</span>
+									</div>
+								</a>
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title hyphens">
+										O.S.T.R.
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-lg-2 card--favourite">
+							<div class="card card-with-vertical-image h-100">
+								<a href="https://www.youtube.com/watch?v=5NV6Rdv1a3I&list=PLDGvrCyjfEasBdUCE-lD3K5MeJkmeWu1w" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/favourites/music-bands/daft-punk.jpg" alt="Daft Punk">
+										<span class="overlay">
+											<i class="fas fa-external-link-alt"></i>
+										</span>
+									</div>
+								</a>
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title hyphens">
+										Daft Punk
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-lg-2 card--favourite">
+							<div class="card card-with-vertical-image h-100">
+								<a href="https://www.youtube.com/watch?v=v2AC41dglnM&list=RDEMDs8vWIQKMflBG8QUQQaUrw" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/favourites/music-bands/ac-dc.jpg" alt="AC/DC">
+										<span class="overlay">
+											<i class="fas fa-external-link-alt"></i>
+										</span>
+									</div>
+								</a>
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title hyphens">
+										AC/DC
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-lg-2 card--favourite">
+							<div class="card card-with-vertical-image h-100">
+								<a href="https://www.youtube.com/watch?v=tEPB7uzKuh4&list=PLeJR3TPXf7n5K1RXP2rjdpz3dRMz5vCXG" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/favourites/music-bands/pendulum.jpg" alt="Pendulum">
+										<span class="overlay">
+											<i class="fas fa-external-link-alt"></i>
+										</span>
+									</div>
+								</a>
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title hyphens">
+										Pendulum
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-lg-2 card--favourite">
+							<div class="card card-with-vertical-image h-100">
+								<a href="https://www.youtube.com/watch?v=YV78vobCyIo&list=PLhkvvugdKb-c6XGk3h1dfZ24B6xUvCfGw" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/favourites/music-bands/the-prodigy.jpg" alt="The Prodigy">
+										<span class="overlay">
+											<i class="fas fa-external-link-alt"></i>
+										</span>
+									</div>
+								</a>
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title hyphens">
+										The Prodigy
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-lg-2 card--favourite">
+							<div class="card card-with-vertical-image h-100">
+								<a href="https://www.youtube.com/watch?v=sjN-NGsRg9g&list=PL08230BC08BF305AC" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/favourites/music-bands/linkin-park.jpg" alt="Linkin Park">
+										<span class="overlay">
+											<i class="fas fa-external-link-alt"></i>
+										</span>
+									</div>
+								</a>
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title hyphens">
+										Linkin Park
 									</p>
 								</div>
 							</div>
