--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<meta property="fb:admins" content="100000630277259">
 		<link href="assets/images/brand/favicon.png" rel="shortcut icon" type="image/png">
 		<link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.6.11/css/lightgallery.min.css" rel="stylesheet">
 		<link href="assets/stylesheets/css/main.min.css" rel="stylesheet">
 	</head>
 	<body id="page-top">
@@ -311,7 +312,7 @@
 				<h1 class="section-title">Moje ulubione</h1>
 				<div class="card-section">
 					<h3 class="card-section-title">Filmy i programy TV</h3>
-					<div class="row">
+					<div class="row px-2">
 						<div class="col-md-4 col-lg-2 card--favourite">
 							<div class="card card-with-vertical-image h-100">
 								<a href="https://www.imdb.com/title/tt1872194/" target="_blank">
@@ -418,7 +419,7 @@
 				</div>
 				<div class="card-section">
 					<h3 class="card-section-title">Kanały na YouTube</h3>
-					<div class="row">
+					<div class="row px-2">
 						<div class="col-md-4 col-lg-2 card--favourite">
 							<div class="card card-with-vertical-image h-100">
 								<a href="https://www.youtube.com/user/LinusTechTips" target="_blank">
@@ -525,7 +526,7 @@
 				</div>
 				<div class="card-section">
 					<h3 class="card-section-title">Zespoły muzyczne</h3>
-					<div class="row">
+					<div class="row px-2">
 						<div class="col-md-4 col-lg-2 card--favourite">
 							<div class="card card-with-vertical-image h-100">
 								<a href="https://www.youtube.com/watch?v=R3lPmKarxJ4&list=PL9DF82EDE980AE95A" target="_blank">
@@ -632,6 +633,120 @@
 				</div>
 			</div>
 		</section>
+		<section id="trips" class="section">
+			<div class="container">
+				<h1 class="section-title">Moje podróże</h1>
+				<div id="trips-gallery" class="card-section card-section--flat">
+					<h3 class="card-section-title">Piękne miejsca, które miałem przyjemność zwiedzić</h3>
+					<div class="row px-2 mb-3">
+						<div class="col-sm-12 col-md-4 card--trips">
+							<div class="card card-with-vertical-image h-100">
+								<a href="assets/images/trips/full/rhodes-greece.jpg" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/trips/thumbnails/rhodes-greece.jpg" alt="Rodos, Grecja">
+										<span class="overlay">
+											<i class="fas fa-search"></i>
+										</span>
+									</div>
+								</a>
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title hyphens">
+										Rodos, Grecja
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-12 col-md-4 card--trips">
+							<div class="card card-with-vertical-image h-100">
+								<a href="assets/images/trips/full/hurghada-egypt.jpg" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/trips/thumbnails/hurghada-egypt.jpg" alt="Hurghada, Egipt">
+										<span class="overlay">
+											<i class="fas fa-search"></i>
+										</span>
+									</div>
+								</a>
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title hyphens">
+										Hurghada, Egipt
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-12 col-md-4 card--trips">
+							<div class="card card-with-vertical-image h-100">
+								<a href="assets/images/trips/full/saint-tropez-france.jpg" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/trips/thumbnails/saint-tropez-france.jpg" alt="Saint-Tropez, Francja">
+										<span class="overlay">
+											<i class="fas fa-search"></i>
+										</span>
+									</div>
+								</a>
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title hyphens">
+										Saint-Tropez, Francja
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row px-2">
+						<div class="col-sm-12 col-md-4 card--trips">
+							<div class="card card-with-vertical-image h-100">
+								<a href="assets/images/trips/full/venice-italy.jpg" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/trips/thumbnails/venice-italy.jpg" alt="Wenecja, Włochy">
+										<span class="overlay">
+											<i class="fas fa-search"></i>
+										</span>
+									</div>
+								</a>
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title hyphens">
+										Wenecja, Włochy
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-12 col-md-4 card--trips">
+							<div class="card card-with-vertical-image h-100">
+								<a href="assets/images/trips/full/monaco.jpg" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/trips/thumbnails/monaco.jpg" alt="Monako">
+										<span class="overlay">
+											<i class="fas fa-search"></i>
+										</span>
+									</div>
+								</a>
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title hyphens">
+										Monako
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-12 col-md-4 card--trips">
+							<div class="card card-with-vertical-image h-100">
+								<a href="assets/images/trips/full/antalya-turkey.jpg" target="_blank">
+									<div class="card-img-top">
+										<img class="img-fluid" src="assets/images/trips/thumbnails/antalya-turkey.jpg" alt="Antalya, Turcja">
+										<span class="overlay">
+											<i class="fas fa-search"></i>
+										</span>
+									</div>
+								</a>
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title hyphens">
+										Antalya, Turcja
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		<footer class="footer">
 			<div class="container">
 				<div class="social-media">
@@ -675,6 +790,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/css-element-queries/1.0.0/ResizeSensor.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.7.6/jquery.nicescroll.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.7/typed.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.6.11/js/lightgallery-all.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
 		<script src="assets/javascripts/main.min.js"></script>
 	</body>
