Added more section

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 				</div>
 			</div>
 		</nav>
-		<header id="intro" class="hero hero--primary">
+		<header id="intro" class="hero hero--primary bg-clear1">
 			<div class="container h-100">
 				<div class="row h-100">
 					<div class="col-md-12 col-lg-9 m-auto">
-						<div class="card card--intro">
+						<div class="card card--cta">
 							<div class="row align-items-center flex-nowrap">
 								<div class="col">
 									<img class="card-image" src="assets/images/pictures/fullbody-picture.png" alt="Zdjęcie całej osoby">
@@ -318,7 +318,7 @@
 								<a href="https://www.imdb.com/title/tt1872194/" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/favourites/posters/the-judge.jpg" alt="The Judge Poster">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-external-link-alt"></i>
 										</span>
 									</div>
@@ -335,7 +335,7 @@
 								<a href="https://www.imdb.com/title/tt0816692/" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/favourites/posters/interstellar.jpg" alt="Interstellar Poster">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-external-link-alt"></i>
 										</span>
 									</div>
@@ -352,7 +352,7 @@
 								<a href="https://www.imdb.com/title/tt0068646/" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/favourites/posters/the-godfather.jpg" alt="The Godfather Poster">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-external-link-alt"></i>
 										</span>
 									</div>
@@ -369,7 +369,7 @@
 								<a href="https://www.imdb.com/title/tt1172049/" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/favourites/posters/demolition.jpg" alt="Demolition Poster">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-external-link-alt"></i>
 										</span>
 									</div>
@@ -386,7 +386,7 @@
 								<a href="https://www.imdb.com/title/tt1675434/" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/favourites/posters/intouchables.jpg" alt="Intouchables Poster">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-external-link-alt"></i>
 										</span>
 									</div>
@@ -403,7 +403,7 @@
 								<a href="https://www.imdb.com/title/tt4816364/" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/favourites/posters/battlebots.jpg" alt="BattleBots Poster">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-external-link-alt"></i>
 										</span>
 									</div>
@@ -425,7 +425,7 @@
 								<a href="https://www.youtube.com/user/LinusTechTips" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/favourites/youtube-channels/linustechtips.jpg" alt="LinusTechTips">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-external-link-alt"></i>
 										</span>
 									</div>
@@ -442,7 +442,7 @@
 								<a href="https://www.youtube.com/channel/UC4QZ_LsYcvcq7qOsOhpAX4A" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/favourites/youtube-channels/coldfusion.jpg" alt="ColdFusion">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-external-link-alt"></i>
 										</span>
 									</div>
@@ -459,7 +459,7 @@
 								<a href="https://www.youtube.com/channel/UCR1IuLEqb6UEA_zQ81kwXfg" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/favourites/youtube-channels/realengineering.jpg" alt="ColdFusion">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-external-link-alt"></i>
 										</span>
 									</div>
@@ -476,7 +476,7 @@
 								<a href="https://www.youtube.com/channel/UC6mIxFTvXkWQVEHPsEdflzQ" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/favourites/youtube-channels/greatscott.jpg" alt="GreatScott!">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-external-link-alt"></i>
 										</span>
 									</div>
@@ -493,7 +493,7 @@
 								<a href="https://www.youtube.com/channel/UCQ0KFtUTiUVKL9TDb8m65NQ" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/favourites/youtube-channels/generalsgentlemen.jpg" alt="GeneralsGentlemen">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-external-link-alt"></i>
 										</span>
 									</div>
@@ -510,7 +510,7 @@
 								<a href="https://www.youtube.com/channel/UCLx053rWZxCiYWsBETgdKrQ" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/favourites/youtube-channels/lgr.jpg" alt="LGR">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-external-link-alt"></i>
 										</span>
 									</div>
@@ -532,7 +532,7 @@
 								<a href="https://www.youtube.com/watch?v=R3lPmKarxJ4&list=PL9DF82EDE980AE95A" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/favourites/music-bands/ostr.jpg" alt="O.S.T.R.">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-external-link-alt"></i>
 										</span>
 									</div>
@@ -549,7 +549,7 @@
 								<a href="https://www.youtube.com/watch?v=5NV6Rdv1a3I&list=PLDGvrCyjfEasBdUCE-lD3K5MeJkmeWu1w" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/favourites/music-bands/daft-punk.jpg" alt="Daft Punk">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-external-link-alt"></i>
 										</span>
 									</div>
@@ -566,7 +566,7 @@
 								<a href="https://www.youtube.com/watch?v=v2AC41dglnM&list=RDEMDs8vWIQKMflBG8QUQQaUrw" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/favourites/music-bands/ac-dc.jpg" alt="AC/DC">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-external-link-alt"></i>
 										</span>
 									</div>
@@ -583,7 +583,7 @@
 								<a href="https://www.youtube.com/watch?v=tEPB7uzKuh4&list=PLeJR3TPXf7n5K1RXP2rjdpz3dRMz5vCXG" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/favourites/music-bands/pendulum.jpg" alt="Pendulum">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-external-link-alt"></i>
 										</span>
 									</div>
@@ -600,7 +600,7 @@
 								<a href="https://www.youtube.com/watch?v=YV78vobCyIo&list=PLhkvvugdKb-c6XGk3h1dfZ24B6xUvCfGw" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/favourites/music-bands/the-prodigy.jpg" alt="The Prodigy">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-external-link-alt"></i>
 										</span>
 									</div>
@@ -617,7 +617,7 @@
 								<a href="https://www.youtube.com/watch?v=sjN-NGsRg9g&list=PL08230BC08BF305AC" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/favourites/music-bands/linkin-park.jpg" alt="Linkin Park">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-external-link-alt"></i>
 										</span>
 									</div>
@@ -644,7 +644,7 @@
 								<a href="assets/images/trips/full/rhodes-greece.jpg" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/trips/thumbnails/rhodes-greece.jpg" alt="Rodos, Grecja">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-search"></i>
 										</span>
 									</div>
@@ -661,7 +661,7 @@
 								<a href="assets/images/trips/full/hurghada-egypt.jpg" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/trips/thumbnails/hurghada-egypt.jpg" alt="Hurghada, Egipt">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-search"></i>
 										</span>
 									</div>
@@ -678,7 +678,7 @@
 								<a href="assets/images/trips/full/saint-tropez-france.jpg" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/trips/thumbnails/saint-tropez-france.jpg" alt="Saint-Tropez, Francja">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-search"></i>
 										</span>
 									</div>
@@ -697,7 +697,7 @@
 								<a href="assets/images/trips/full/venice-italy.jpg" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/trips/thumbnails/venice-italy.jpg" alt="Wenecja, Włochy">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-search"></i>
 										</span>
 									</div>
@@ -714,7 +714,7 @@
 								<a href="assets/images/trips/full/monaco.jpg" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/trips/thumbnails/monaco.jpg" alt="Monako">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-search"></i>
 										</span>
 									</div>
@@ -731,7 +731,7 @@
 								<a href="assets/images/trips/full/antalya-turkey.jpg" target="_blank">
 									<div class="card-img-top">
 										<img class="img-fluid" src="assets/images/trips/thumbnails/antalya-turkey.jpg" alt="Antalya, Turcja">
-										<span class="overlay">
+										<span class="overlay overlay--link">
 											<i class="fas fa-search"></i>
 										</span>
 									</div>
@@ -740,6 +740,29 @@
 									<p class="card-title hyphens">
 										Antalya, Turcja
 									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section id="more" class="section section--cta bg-clear2">
+			<span class="overlay overlay--dark"></span>
+			<div class="container">
+				<h1 class="section-title">Zainteresowałem Cię?</h1>
+				<div class="row">
+					<div class="col">
+						<div class="card card--cta card--more">
+							<div class="card-body">
+								<p class="card-text">
+									Jeśli tak, to zachęcam Cię do poznania mnie od strony profesjonalnej.
+								</p>
+								<p class="card-text">
+									Dowiedz się, nad czym pracuję na co dzień.
+								</p>
+								<div class="text-center">
+									<a class="btn btn-primary" href="https://www.jonaszkadziela.pl/" target="_blank">Przejdź do strony</a>
 								</div>
 							</div>
 						</div>
